# Birdstrike_Prediction

./: EDA.ipynb  MachineLearning.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt
models/: phase_encoder.pkl  species_encoder.pkl  xgb_birdstrike_model.pkl  xgb_phase_model.pkl
